[metadata]
name = spatialtx-studio-desktop
version = attr: spatialtx_desktop.version.__version__
description = Exploratory spatial transcriptomics desktop analysis and raw-to-H5AD conversion
long_description = file: README.md
long_description_content_type = text/markdown
author = Hyokhan Park, MD
license = Apache-2.0
license_files = LICENSE

[options]
packages = find:
py_modules = desktop_app, app_cli, advanced_cli
python_requires = >=3.11
include_package_data = True
install_requires =
    anndata>=0.10
    h5py>=3.10
    matplotlib>=3.8
    numpy>=1.26
    pandas>=2.1
    Pillow>=10.0
    PyYAML
    scanpy
    scikit-learn
    scipy>=1.11

[options.packages.find]
include =
    spatialtx_desktop*
    spatialtx_studio*

[options.package_data]
spatialtx_studio.resources =
    *.yaml

[options.entry_points]
console_scripts =
    spatialtx-desktop = desktop_app:main
    spatialtx = app_cli:main
    spatialtx-advanced = advanced_cli:main
